# bot-bolha-dados

./: .env.example  .gitignore  Procfile  README.md  main.py  pyproject.toml  requirements.txt
bolha_dados/: main.py  twitter_bot.py  twitter_options.py
